<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2020 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LogInActivity">


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="222dp"
        android:layout_height="82dp"
        android:text="@string/login_LOGIN"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />



    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">

        <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
            android:id="@+id/et_login_userName"
            style="@style/EditInfoItem"
            android:inputType="textEmailAddress"
            app:sEditTextHint="@string/login_username"
            app:sLeftIconRes="@drawable/ic_login_email_24"
            app:sLeftIconTint="?attr/colorAccent"
            app:sLeftTextString="邮箱" />

        <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
            android:id="@+id/et_login_password"
            style="@style/EditInfoItem"
            android:inputType="textPassword"
            app:sEditTextButtonType="password"
            app:sEditTextHint="@string/login_password"
            app:sEditTextIsAsteriskStyle="true"
            app:sLeftIconRes="@drawable/ic_login_password_24"
            app:sLeftIconTint="?attr/colorAccent"
            app:sLeftTextString="密码" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cb_rm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="记住密码"
                android:layout_gravity="left"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/bt_login_register"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center"
                android:text="@string/login_button_register"
                android:textSize="14sp"
                android:layout_weight="1"/>

        </LinearLayout>


        <com.xuexiang.xui.widget.button.roundbutton.RoundButton
            android:id="@+id/bt_login_login"
            style="@style/RoundButton.Auto"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:padding="25dp"
            android:text="@string/login_button_login" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>