<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="222dp"
        android:layout_height="82dp"
        android:text="注册"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.xuexiang.xui.widget.edittext.PasswordEditText
        app:met_floatingLabel="normal"
        android:id="@+id/et_register_password"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textColor="@color/xui_config_color_edittext_input_text"
        android:textColorHint="@color/xui_config_color_edittext_hint_text"
        android:textStyle="bold"
        android:background="@color/xui_config_color_white"

        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <com.xuexiang.xui.widget.edittext.PasswordEditText
        android:id="@+id/et_register_verifyPassword"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:background="@color/xui_config_color_white"
        android:ems="10"
        android:hint="@string/login_verify_password"
        android:inputType="textPassword"
        android:textColor="@color/xui_config_color_edittext_input_text"
        android:textColorHint="@color/xui_config_color_edittext_hint_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:met_floatingLabel="normal" />



    <com.xuexiang.xui.widget.edittext.ClearEditText
        app:met_floatingLabel="normal"
        android:id="@+id/et_register_userName"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/login_username"
        android:inputType="textEmailAddress"
        android:textColor="@color/xui_config_color_edittext_input_text"
        android:textColorHint="@color/xui_config_color_edittext_hint_text"
        android:textStyle="bold"
        android:background="@color/xui_config_color_white"

        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4350205" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <com.xuexiang.xui.widget.button.roundbutton.RoundButton
        android:id="@+id/bt_register_register"
        style="@style/RoundButton.Auto"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:text="@string/login_button_register"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.5" />



</androidx.constraintlayout.widget.ConstraintLayout>